[package]
authors = ["YuKun Liu <mrxzx.info@gmail.com>"]
description = "Manage sled db in nushell"
repository = "https://github.com/mrxiaozhuox/nu_plugin_sled"
edition = "2021"
license = "MIT"
name = "nu_plugin_sled"
version = "0.1.3"

[dependencies]
nu-plugin = { version = "0.104.0" }
nu-protocol = { version = "0.104.0", features = ["plugin"] }

sled = "0.34.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

[dev-dependencies]
nu-plugin-test-support = { version = "0.104.0" }
nu-cmd-lang = { version = "0.104.0" }
